--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "square-cube",
   "version": "0.1.0",
   "private": true,
-	"homepage": "https://rupeshhcs-oss.github.io/square-cube",
-	"scripts": {
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
-	},
+  "homepage": "https://rupeshhcs-oss.github.io/square-cube",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -16,12 +20,6 @@
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
